# RP5RS

./: MANIFEST.in  README.md  RP5RS.py  StartCode.sh  pyproject.toml
.github/workflows/: publish.yml
BACKUP/: StartCode.sh
src/RP5RS/: PrintLogo.py  RP5RS.py  StartCode.sh  __init__.py
