[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RP5RS"
version = "2.0.4"
authors = [
  { name="Jenny Fuller", email="jennyfuller1085@example.com" },
]
description = "An automated initialization environment wrapper for MakeCode Arcade on Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.7"

# 💥 THE MAGIC FIX FOR PARAMIKO GOES HERE:
dependencies = [
    "paramiko",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
[tool.setuptools]
include-package-data = true

# THIS IS THE MAGIC FIX HERE:
[tool.setuptools.package-data]
"RP5RS" = ["*.sh"]
